# discord-sentiment-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  analyzer.py  config.py  database.py  main.py
bot/cogs/: __init__.py  scheduler.py  sentiment.py
tests/: __init__.py  test_database.py  test_sentiment.py
